modal open page overflow issue resolved

--- a/themes/indigo-wine/less/_club.less
+++ b/themes/indigo-wine/less/_club.less
@@ -18,6 +18,13 @@
 	}
 }
 
+// page overflow issue balanced
+.no-scroll{
+	.container{
+		padding-left: 0;
+	}
+}
+
 .show-details{
 	p{
 		font-weight: 600;
